optimizing the backend codes